<resources>
    <string name="app_name" translatable="false">TravelSnap</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="back">Back</string>
    <string name="login_failed">Login Failed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="web_id">10008700509-m0e146uot8gmfcsbjnjsu203jlltfkg4.apps.googleusercontent.com</string>
    <string name="place_name">Name</string>
    <string name="google_maps_key">AIzaSyD7VpLKH4KEv5tbUAmhDxvI7wq6EPCaFfE</string>
    <string name="place_api">AIzaSyDyXgNxbZgdRziCUyATBOdcd7xAvt75FOU</string>
    <string name="register_failed">Register Failed</string>
    <string name="error_database_access">Error accessing the database.</string>
    <string name="error_data_not_found">Requested data not found in the database.</string>
    <string name="error_data_insertion">Error occurred while inserting data into the database.</string>
    <string name="error_data_update">Error occurred while updating data in the database.</string>
    <string name="error_data_deletion">Error occurred while deleting data from the database.</string>
    <string name="error_unexpected">An unexpected error occurred: %1$s</string>
    <string name="error_sqlite">SQLite error: %1$s</string>
    <string name="no_name">No name</string>
    <string name="no_address">No address</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="no_data">No data</string>
    <string name="error">Error</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading...</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add_place">Add Place</string>
    <string name="save">Save</string>
    <string name="search_name_of_place">Search name of place</string>
    <string name="failed_to_load_the_list">Failed to load the list</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_you_want_to_delete_this_place">Are you sure you want to delete this place?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="check_your_network_connection">Check your network connection</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_email">Invalid Email</string>

</resources>