...
import androidx.compose.ui.unit.dp
import cz.mendelu.pef.xchomo.travelsnap.ui.theme.AppColors
import cz.mendelu.pef.xchomo.travelsnap.ui.theme.CustomTypography
import cz.mendelu.pef.xchomo.travelsnap.ui.theme.basicMargin
import cz.mendelu.pef.xchomo.travelsnap.ui.theme.halfMargin

const val TestLoginEmailTag = "TestLoginEmailTag"
const val TestLoginPasswordTag = "TestLoginPasswordTag"
const val TestSearchPlaceTag = "SearchField"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun CustomTextField(
    value: String,
...
